2010-01-16  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_save_temporary): make
	temporary file read-only.

2010-01-15  Pawel Salek

	* libbalsa/imap/imap_compress.c:
	* libbalsa/imap/siobuf.c: complete the compression error handling.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(bmwt_populate_popup_cb): use them.

2010-01-14  Peter Bloomfield

	* libbalsa/html.h: new methods for printing.
	* libbalsa/html.c (libbalsa_html_can_print),
	(libbalsa_html_print): implement them.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(bmwt_populate_popup_cb): use them.

2010-01-14  Peter Bloomfield

	* configure.in: require NetworkManager version 0.7.
	* src/main-window.c: use GObject-based API instead of deprecated
	older API.

2010-01-12  Pawel Salek

	* libbalsa/html.c: fix libbalsa_html_popup_menu_widget() arg list.

2010-01-12  Peter Bloomfield

	* libbalsa/html.h: new public method to retrieve the real HTML
	widget.
	* libbalsa/html.c (libbalsa_html_popup_menu_widget): ditto.
	* src/balsa-mime-widget-text.c (bmwt_populate_popup_menu),
	(balsa_gtk_html_popup), (bmwt_populate_popup_cb),
	(bm_widget_new_html): use it to implement popup menu for
	WebKitWebView.

2010-01-11  Peter Bloomfield

	* libbalsa/address-book-gpe.c
	(libbalsa_address_book_gpe_alias_complete): free error with
	sqlite3_free() instead of free(); fixes bug #606676 (Stanislav
	Brabec).

2010-01-11  Peter Bloomfield

	* libbalsa/html.h: new API for libbalsa_html_new.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text),
	(bm_widget_new_html): use it.
	* libbalsa/html.c (lbh_get_body_content,
	lbh_get_web_view, libbalsa_html_can_zoom,
	libbalsa_html_zoom, libbalsa_html_can_select,
	libbalsa_html_select_all, libbalsa_html_copy,
	libbalsa_html_can_search, libbalsa_html_search_text,